--- a/app/components/filters/FilterPills.module.css
+++ b/app/components/filters/FilterPills.module.css
@@ -1,7 +1,14 @@
 .pillContainer {
+  position:absolute;
   display: flex;
   flex-wrap: wrap;
   margin: 0.5rem 0;
+    justify-content: flex-start;
+  max-height: 100px; /* Adjust as needed */
+  overflow-y: auto;
+  padding: 10px;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 @media (max-width: 36em) {
