--- a/app/components/navigation/HeaderSection.module.css
+++ b/app/components/navigation/HeaderSection.module.css
@@ -10,7 +10,7 @@
   max-width: 250px;
   justify-content: flex-start;
   align-items: center;
-  padding: 1rem;
+  padding: 1rem 1rem 0 1rem;
 }
 
 .aboutContainer {
@@ -36,4 +36,6 @@
   border: none;
   text-align: end;
   background-color: transparent;
+  text-decoration: none;
+  color: #2e3032;
 }
